--- a/themes/capt/sass/tablet/_tablet-login.scss
+++ b/themes/capt/sass/tablet/_tablet-login.scss
@@ -74,5 +74,9 @@
     div#block-block-12 {
       padding-top: 20px;
     }
+    div#block-block-13 {
+      margin-top: 25px;
+      margin-left: -280px;
+    }
     
   }
